--- a/views/public/main.html
+++ b/views/public/main.html
@@ -60,7 +60,7 @@
 
     <div class="layui-footer" style="font-size: 12px;text-align:center;">
         <!-- 底部固定区域 -->
-        2017 &copy; PPGO_ApiAdmin  Power by Beego
+        2017 &copy; BaseAdmin Power by Beego
     </div>
 </div>
 
